# orchestration-services-example

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/include/: orchestration.h
application/src/: main.cpp  orchestration.cpp
orchestration/: CMakeLists.txt
orchestration/include/orchestration/: orchestration.h  scheduler.h
orchestration/src/: orchestration.cpp  scheduler.cpp
service/: CMakeLists.txt
service/attitude_control/: CMakeLists.txt
service/attitude_control/include/attitude_control/: attitude_control.h
service/attitude_control/src/: attitude_control.cpp
service/input_control/: CMakeLists.txt
service/input_control/include/input_control/: input_control.h
service/input_control/src/: input_control.cpp
service/mode_control/: CMakeLists.txt
service/mode_control/include/mode_control/: mode_control.h
service/mode_control/src/: mode_control.cpp
service/motor_control/: CMakeLists.txt
service/motor_control/include/motor_control/: motor_control.h
service/motor_control/src/: motor_control.cpp
test/src/: account_test.cpp
